--- a/slider.html
+++ b/slider.html
@@ -23,12 +23,12 @@
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide"><img src="img/1.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="img/2.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="img/3.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="img/1.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="img/2.jpg" alt=""></div>
-            <div class="swiper-slide"><img src="img/3.jpg" alt=""></div>
+            <div class="swiper-slide"><img src="img/1.jpeg" alt=""></div>
+            <div class="swiper-slide"><img src="img/2.jpeg" alt=""></div>
+            <div class="swiper-slide"><img src="img/3.jpeg" alt=""></div>
+            <div class="swiper-slide"><img src="img/1.jpeg" alt=""></div>
+            <div class="swiper-slide"><img src="img/2.jpeg" alt=""></div>
+            <div class="swiper-slide"><img src="img/3.jpeg" alt=""></div>
         </div>
         <!-- If we need pagination -->
         <div class="swiper-pagination"></div>
